SOURCES = nhpc_socket.cpp nhpc_server.cpp nhpc_accept.cpp nhpc_waitio.cpp nhpc_connection.cpp nhpc_http.cpp nhpc_http_request.cpp \
nhpc_communication.cpp nhpc_recv.cpp nhpc_send.cpp nhpc_event.cpp nhpc_event_kqueue.cpp nhpc_worker.cpp nhpc_http_parse.cpp \
nhpc_http_response.cpp nhpc_headers.cpp nhpc_event_epoll.cpp

noinst_LTLIBRARIES    = libnetwork.la 
libnetwork_la_SOURCES = $(SOURCES)
